<resources>
    <string name="app_name" translatable="false">GIFster</string>
    <string name="facebook_app_id" translatable="false">1742342752707809</string>
    <string name="giphy_key" translatable="false">n3eueCStupKOQ</string>
    <string name="application_definiton">Talk to strangers with GIFs.</string>
    <string name="encourege_definiton">Show your awesome side and convince your mate to get \n his/her Facebook Profile.</string>
    <string name="facebook_definition">No Registration! Just login with your Facebook account!</string>
    <string name="ready_definition">All set!\n Login now!</string>
    <string name="login">Log In!</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>

    <string name="giphyurl" translatable="false">http://api.giphy.com</string>
    <string name="serverurl" translatable="false">http://gifmessenger.herokuapp.com</string>
    <string name="deletetitle">Delete</string>
    <string name="deletemessage">Are you sure you want to delete this gif?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="loadmore">Load More GIF!</string>
    <string name="tofavourites">Add to GIFboard</string>
    <string name="dismiss">Dismiss</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="gifboard">GIFBOARD</string>
    <string name="searchgif">Search GIFs...</string>
    <string name="profile">Profile</string>
    <string name="message">Messages</string>
    <string name="gifs">GIF Search</string>
    <string name="about">Settings</string>
    <string name="logut">Log Out</string>
    <string name="searchpeople">Search for People</string>
    <string name="noonefound">No new person.\nBut you may try again soon.</string>
    <string name="nomatches">No matches yet.\nKeep trying!</string>
    <string name="nokeyboard">Your GIFBoard is empty.\nClick here to add some.</string>
    <string name="nogif">GIF not found.\nWe will get on that.</string>
    <string name="norevealed">No one has revealed their profile yet.\nKeep trying!</string>
    <string name="gender">Preferred Gender</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="rateapplication">Rate this application!</string>
    <string name="deleteaccount">Delete this account!</string>
    <string name="searchatgiphy">Search on GIPHY</string>
    <string name="startconversation">No messages yet.\nLet\'s start a GIF conversation.</string>
    <string name="information">GIFster is a Team Spaghetti product.</string>
    <string name="nogifs">We have nothing to show.\nBut you can search for it below</string>
    <string name="dialog_message">Are you you want to delete this account?\n\nAll your information will be deleted from the system.</string>
    <string name="reveal_message">Are you sure you want reveal your Facebook profile?</string>
    <string name="reveals">Profiles</string>
    <string name="network_error_message">No Internet Connection!\nPlease check your internet connectivity.</string>
    <string name="login_error">Login Error: </string>
    <string name="login_cancel">Login Cancelled.</string>
    <string name="filter_string" translatable="false">com.teamspaghetti.gifster.newmessage</string>

    <string name="searchpeopletitle">Search People</string>
    <string name="thumbupexplanation">Use this button to\nGive\"Thumbs Up\" to this person.</string>
    <string name="thumbdownexplanation">Use this Button to\nContinue with other candidates.</string>
    <string name="thumbupkey" translatable="false">thumbup</string>
    <string name="thumbdownkey" translatable="false">thumbdown</string>

    <string name="profiletitle">Profile Page</string>
    <string name="profilesexplanation">Under this tab you can see Revealed Profiles from other users</string>
    <string name="gifboardexplanation">Under this tab you may find gifs you saved</string>
    <string name="profilekey" translatable="false">profile</string>
    <string name="gifboardkey" translatable="false">gifboard</string>

    <string name="messagelisttitle">Reveal Profile</string>
    <string name="messagelistexplanation">You can reveal your profile with this button.</string>
    <string name="revealkey" translatable="false">revealprofile</string>

    <string name="searchgifexplanation">Click here to add GIF to GIFBOARD.</string>
    <string name="searchgifkey" translatable="false">gifs</string>

    <string name="profilecardexplanation">Click this card to open profile of your match.</string>
    <string name="profilecardkey" translatable="false">profilecard</string>
</resources>
