<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender"
                android:id="@+id/textView"
                android:layout_margin="12dp"
                android:textColor="@color/colorPrimary" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="12dp"
                android:id="@+id/gender_settings">
                <RadioButton android:id="@+id/women_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women"
                    android:textColor="@color/colorPrimary" />
                <RadioButton android:id="@+id/men_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textColor="@color/colorPrimary" />
            </RadioGroup>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:id="@+id/rate_application"
        android:layout_weight="0.3">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/rateapplication"
        android:gravity="center"
        android:textColor="@color/colorPrimary" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:id="@+id/delete_account"
        android:layout_weight="0.3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/deleteaccount"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/imageView"
            android:src="@drawable/foto"
            android:layout_margin="12dp"
            android:tint="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/information"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>